--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
 	<head>
 	</head>
+		<link rel="stylesheet" href="iron.css" type = "text/css"/>
+		<script src="map.js" type="text/javascript"/>
 
 	<body>
+		<div id="map">
+		</div>
+		<script async defer
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaTHlfdkePl9TZz5UalIW7jbdpKFHwOiU&callback=initmap">
+		</script>
 	</body>
 </html>
